# guiedit

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
derive/: Cargo.toml
derive/src/: inspectable.rs  lib.rs  specialization.rs  tree_element.rs  tree_node.rs  usages.rs  util.rs
derive/tests/: derive.rs  inspectable_tests.rs  structures_treenode.rs
derive/tests/inspectable/: enums.rs  mod.rs  structures.rs
examples/: custom.rs  inspection.rs  mouse.rs  pong.rs  tree.rs
src/: inspectable.rs  lib.rs  tree.rs  util.rs
src/sfml/: graphics.rs  inspectable.rs  mod.rs  tree.rs  util.rs
