[package]
name = "guiedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "guiedit"

[features]
sfml = ["dep:sfml", "egui-sfml"]

[dependencies]
egui = "0.19.0"
egui-sfml = { git = "https://github.com/aleokdev/egui-sfml", branch = "time-fix", optional = true }
sfml = { version = "0.18.1", optional = true }

[dev-dependencies]
rand = "0.8.5"
guiedit_derive = { path = "derive" }

[workspace]
members = ["derive"]

[[example]]
name = "custom"
required-features = ["sfml"]

[[example]]
name = "inspection"
required-features = ["sfml"]

[[example]]
name = "mouse"
required-features = ["sfml"]

[[example]]
name = "pong"
required-features = ["sfml"]

[[example]]
name = "tree"
required-features = ["sfml"]
