[package]
name = "guiedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "guiedit"

[features]
default = ["derive"]
sfml = ["dep:sfml", "egui-sfml"]
derive = ["dep:guiedit_derive"]

[dependencies]
egui = "0.19.0"
egui-sfml = { git = "https://github.com/aleokdev/egui-sfml", branch = "time-fix", optional = true }
sfml = { version = "0.18.1", optional = true }
guiedit_derive = { path = "derive", optional = true }

[dev-dependencies]
rand = "0.8.5"

[workspace]
members = ["derive"]

[[example]]
name = "custom"
required-features = ["sfml", "derive"]

[[example]]
name = "inspection"
required-features = ["sfml", "derive"]

[[example]]
name = "mouse"
required-features = ["sfml", "derive"]

[[example]]
name = "pong"
required-features = ["sfml", "derive"]

[[example]]
name = "tree"
required-features = ["sfml", "derive"]
