[package]
name = "guiedit"
description = "Easily add a developer GUI to any graphical application"
version = "0.1.0"
edition = "2021"
authors = ["Alejandro Perea <aleok.inf@gmail.com>"]
homepage = "https://github.com/aleokdev/guiedit"
repository = "https://github.com/aleokdev/guiedit"
license = "MIT OR Apache-2.0"
keywords = ["editor", "gamedev", "inspector"]
exclude = ["/res"]
categories = [
    "development-tools",
    "development-tools::debugging",
    "visualization",
]

[lib]
name = "guiedit"

[features]
default = ["derive"]
sfml = ["dep:sfml", "egui-sfml"]
derive = ["dep:guiedit_derive"]

[dependencies]
egui = "0.19.0"
egui-sfml = { version = "0.2.0", optional = true }
sfml = { version = "0.19.0", optional = true }
guiedit_derive = { path = "derive", version = "=0.1.0", optional = true }

[dev-dependencies]
rand = "0.8.5"

[workspace]
members = ["derive"]

[[example]]
name = "custom"
required-features = ["sfml", "derive"]

[[example]]
name = "inspection"
required-features = ["sfml", "derive"]

[[example]]
name = "mouse"
required-features = ["sfml", "derive"]

[[example]]
name = "pong"
required-features = ["sfml", "derive"]

[[example]]
name = "tree"
required-features = ["sfml", "derive"]
