[package]
name = "guiedit_derive"
description = "Derive Inspectable and NodeTree for any structure or enum"
version = "0.1.0"
edition = "2021"
authors = ["Alejandro Perea <aleok.inf@gmail.com>"]
homepage = "https://github.com/aleokdev/guiedit"
repository = "https://github.com/aleokdev/guiedit"
license = "MIT OR Apache-2.0"
exclude = ["tests/"]
categories = ["development-tools"]

[lib]
name = "guiedit_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full"] }

[dev-dependencies]
guiedit = { path = "..", default-features = false, features = ["derive"] }
